tried fixing homeRoutes to redirect to proper partials, added thankyou page handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,6 @@
 {{#each posts as |post|}}
-<article class="">
-
+<article class="gridbox">
+    <h2>{{post.post_title}}</h2>
+    <p>{{post.post_content}}</p>
 </article>
 {{/each}}
