--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,20 @@
-<section>
-<div>
-    <h3>Welcome back!</h3>
-    <form>
-        <input type="text" id="signInUser" placeholder="Username">
-                <input type="text" id="signInPw" placeholder="Password">
-<button type="submit">Log in</button>
-    </form>
+<section class="loginSect">
+  <div>
+      <h3 class="blog-slogan">Welcome Back!</h3> 
+      </div>
 
-    <div>
-        <p>If you'd like to sign up to Console.blog() click <a href="/signup">HERE</a>
+    <form  class="loginForm">
+      <input type="text" id="signInUser" placeholder="Username" />
+      <input type="text" id="signInPw" placeholder="Password" />
+      <button id="login" class="loginBtn" type="submit">Log in</button>
+
+    </form>
+    <div class="signUpBox">
+      <p >If you'd like to sign up to Console.blog() click
+        <a href="/signup">HERE</a>
         .</p>
     </div>
-</div>
+  </div>
 </section>
 
 <script src="/js/login.js"></script>
