--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,34 +1,34 @@
-<a className="backBtn" href="/">Go Back</a>
-
-<form className="signup__container">
-      <div className="signupTitle">
-        <p>Want to connect with developers like yourself?</p>
-        <h1>Sign Up to Console.blog() Today!</h1>
-        </div>
-      <input
-        type="text"
-        className="infoInput"
-        placeholder="Username"
-        name="signUsername"
-      />
-
-      <input
-        type="text"
-        className="infoInput"
-        placeholder="Password"
-        id="signPassword1"
-      />
-
-      <input
-        type="text"
-        className="infoInput"
-        placeholder="Confirm Password"
-        id="signPassword2"
-      />
-
-      <span className="ahaa">Already have an account?</span>
-      <button type='submit' className="signupBtn">Sign Me Up</button>
-    </form>
+<div class="backBtn">
+  <i class="backArrow"></i>
+  <a class="backBtnLink" href="/">
+  Go Back
+  </a>
+  </div>
 
 
-    <script src="/js/signup.js"></script>
+<form class="loginSect">
+  <div class="">
+    <p class="blog-slogan">Want to connect with developers like yourself?</p>
+    <h1 class="blog-slogan">Sign Up to Console.blog() Today!</h1>
+  </div>
+  <input
+    type="text"
+    placeholder="Username"
+    id="signUsername"
+  />
+
+  <input
+    type="text"
+    placeholder="Password"
+    id="signPW1"
+  />
+
+  <input
+    type="text"
+    placeholder="Confirm Password"
+    id="signPW2"
+  />
+  <button id="signUp" type="submit" class="signUpBtn">Sign Me Up</button>
+</form>
+
+<script src="/js/signup.js"></script>
