--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,9 +7,11 @@
 }
 
 html {
+  position: relative;
+  min-height: 100%;
   font-size: 16px;
   scroll-behavior: smooth !important;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 :root {
@@ -20,6 +22,13 @@ html {
 
 body {
   background-color: var(--body-bg);
+  margin: 0;
+  padding: 0;
+
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
@@ -31,6 +40,45 @@ header {
   background-color: var(--header-bg);
   word-spacing: 0.5em;
 }
+
+
+footer {
+  padding: 3em;
+  font-family: "Press Start 2P", "Roboto Serif";
+  background-color: var(--header-bg);
+  position: static;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  
+}
+
+footer li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  list-style: none;
+  color: var(--header-title);
+  font-size: 1.5em;
+  margin: 1em;
+  padding: 1em;
+  width: auto;
+}
+
+footer ul {
+  width:fit-content;
+    list-style: none;
+    text-align: center;
+    margin: auto;
+}
+footer a:hover {
+  color: rgb(255, 255, 255);
+  transition: color 1s;
+  opacity: 1;
+  transition: opacity 1s;
+}
+
 
 .headliner {
   margin: 2em auto;
@@ -177,13 +225,74 @@ h3 {
 }
 
 main {
-    padding: 3em;
-    overflow: none;
-    justify-content: center;
-  display: grid;
+  min-height: fit-content;
+  margin: 5em;
+  /* display: grid;
   grid-template-columns: repeat(auto, fit-content);
-  gap: 3.5em;
+  gap: 3.5em; */
 }
+
+.backBtn {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+}
+
+.backBtnLink{
+  text-decoration: none;
+  
+}
+
+.backBtnLink:hover {
+scale: 130%;
+  transition: all .5s;
+
+}
+
+.backArrow{
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  right: 120px;
+  height: 15px;
+  width: 15px;
+    border: solid var(--header-title);
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 5px;
+    /* transform: rotate(135deg); */
+    /* -webkit-transform: rotate(135deg); */
+}
+
+.backBtn:hover > .backArrow {
+  visibility: visible;
+  animation: arrow .5s linear infinite;
+}
+
+@keyframes arrow {
+
+  0% {
+    opacity: 0;
+   transform: translateX(0) rotate(135deg);
+
+  }
+
+  50% {
+    opacity: 1;
+    transform: translateX(-25) rotate(135deg);
+
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(-50px) rotate(135deg);
+
+  }
+
+}
+
+
 
 .gridbox {
     height: 20em;
@@ -194,34 +303,74 @@ main {
 
 }
 
-footer {
-  bottom: 0;
-  margin: 0 auto;
-  text-align: start;
-  padding: 2em;
-  font-family: "Press Start 2P", "Roboto Serif";
-  background-color: var(--header-bg);
-  width: 100%;
+.loginSect {
+  margin: auto;
+  display: flex;
+  text-align: center;
+  align-content: center;
+  flex-direction: column;
+  max-width: 600px;
+  color: white;
 }
 
-footer ul a {
+.loginForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-decoration: none;
-  list-style: none;
-  color: var(--header-title);
-  opacity: 0.35;
-  font-size: 1.5em;
-  margin: 1.5em auto;
 }
 
-footer ul {
-    list-style: none;
+.loginBtn, .signUpBtn{
+  margin: .5em;
+  padding: .75em;
+  border-radius: 10px;
+  font-weight: boldest;
+  font-size: 25px;
+  cursor: pointer;
+  background-color: #333;
+  color: white;
+  box-shadow: 2px 2px 1px 1px var(--header-title);
+} 
+
+.loginBtn:hover, .signUpBtn:hover {
+  font-size: 25px;
+  box-shadow: none;
+  scale: 98%;
+  transition: all .75s ease-out;
 }
-footer a:hover {
-  color: rgb(255, 255, 255);
-  transition: color 1s;
-  opacity: 1;
-  transition: opacity 1s;
+
+input {
+  font-family: 'Press Start 2P', 'Roboto Serif';
+  margin: .25em;
+  padding: 5px;
+  /* width: 70%; */
+  background: transparent; 
+  color: var(--header-title);
+  border: none;
+}
+
+.signUpBox{
+margin: 2em;
+}
+
+.signUpBox p, a{ 
+  font-family: 'Press Start 2P', 'Roboto Serif';
+  color: var(--header-title);
+  font-size: 1em;
+  margin: auto;
+  line-height: 1.25em;
+}
+
+.signUpBox a:hover {
+  color: white;
+  transition: color .5s ease-in-out;
+}
+
+.thanksBox{
+margin: auto;
+text-align: center;
+}
+
+.thankYou {
+  margin: 2em;
+  font-family: 'Press Start 2P', 'Roboto Serif';
+  color: var(--header-title);
 }
