added name attr to login and signup.js files:

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -14,18 +14,21 @@
   <input
     type="text"
     placeholder="Username"
+    name="username",
     id="signUsername"
   />
 
   <input
     type="text"
     placeholder="Password"
+    name="signPW1"
     id="signPW1"
   />
 
   <input
     type="text"
     placeholder="Confirm Password"
+      name="signPW2"
     id="signPW2"
   />
   <button id="signUp" type="submit" class="signUpBtn">Sign Me Up</button>
