--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,8 +4,8 @@
       </div>
 
     <form  class="loginForm">
-      <input type="text" id="signInUser" placeholder="Username" />
-      <input type="text" id="signInPw" placeholder="Password" />
+      <input type="text" id="signInUser" name="username" placeholder="Username" />
+      <input type="text" id="signInPw" name="password" placeholder="Password" />
       <button id="login" class="loginBtn" type="submit">Log in</button>
 
     </form>
