--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <section class="loginSect">
   <div>
-      <h3 class="blog-slogan">Welcome Back!</h3> 
+      <h2 class="blog-slogan">Welcome Back!</h2> 
       </div>
 
     <form  class="loginForm">
@@ -11,8 +11,7 @@
     </form>
     <div class="signUpBox">
       <p >If you'd like to sign up to Console.blog() click
-        <a href="/signup">HERE</a>
-        .</p>
+        <a href="/signup">HERE.</a></p>
     </div>
   </div>
 </section>
