--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,5 @@
 <div class="profilePage">
+
     <div class="profilePicBox">
  <img id="profilePicDefault" src="./images/avatar.png"/>
     <h3 class="welcomeUser" >{{username}}</h3>
@@ -7,8 +8,8 @@
    <div class="yourPosts">
     {{#each posts as |post|}}
     <article class="gridbox">
-    <h2>{{post.post_title}}</h2>
-    <p>{{post.post_content}}</p>
+    <h2 class="postTitle">{{post_title}}</h2>
+    <p class="singlePost">{{post_content}}</p>
 </article>
 {{/each}}
    </div>
@@ -17,7 +18,24 @@
    <div class="newPost">
     <h3  class="welcomeUser">Share a New Post</h3>
     <input type="text" placeholder="Title this post" name="title" id="postTitle">
-        <input type="textarea" placeholder="Write your post here" name="mainPost" id="postContent">
-        <button type="submit" class="addPost" id="addPost">Add Post</button>
+        <textarea type="textarea" placeholder="Write your post here" name="mainPost" id="postContent"></textarea>
+        <button id="addPost" type="button" class="addPost">Add Post</button>
    </div>
+
+   <div class="newPost">
+    <h3  class="welcomeUser">Delete a Post</h3>
+    {{!-- <input type="text" placeholder="Title this post" name="title" id="postTitle">
+        <textarea type="textarea" placeholder="Write your post here" name="mainPost" id="postContent"></textarea> --}}
+        <button id="deletePost" type="button" class="deletePost">Delete Post</button>
+   </div>
+
+      <div class="newPost">
+    <h3  class="welcomeUser">Update a Post</h3>
+    {{!-- <input type="text" placeholder="Title this post" name="title" id="postTitle">
+        <textarea type="textarea" placeholder="Write your post here" name="mainPost" id="postContent"></textarea> --}}
+        <button id="editPost" type="button" class="editPost">Update Post</button>
+   </div>
+
 </div>
+
+<script src="/js/addPost.js"></script>
