--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,7 @@ textarea {
   flex-direction: column;
   text-align: center;
   align-content: center;
+  justify-content: justify;
 }
 
 
@@ -230,6 +231,7 @@ main {
 }
 
 .backBtn {
+  margin-top: 4em;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -356,7 +358,7 @@ margin: 2em;
 }
 
 .thanksBox{
-margin: auto;
+margin: 4em auto;
 text-align: center;
 }
 
@@ -364,6 +366,37 @@ text-align: center;
   margin: 2em;
   font-family: 'Press Start 2P', 'Roboto Serif';
   color: var(--header-title);
+}
+
+.yourPosts {
+  display: grid;
+ grid-template-columns: repeat(autofill, 3);
+ grid-template-rows: repeat(autofill);
+  width: min-content;
+  height: min-content;
+}
+
+.myPosts {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  min-width: fit-content;
+  width: 75vw;
+  min-height: 200px;
+  line-height: 2em;
+  margin: 1em;
+  background-color: var(--header-bg);
+  border-radius: 20px;
+  padding: 1em;
+  box-shadow: 2px 2px 2px 0px rgb(55, 55, 55);
+  border: solid 0px white;
+}
+
+.userPost {
+  width: fit-content;
+  max-width: 150px;
+  background-color: var(--body-bg);
+  box-shadow: 0px 0px 4px 4px rgba(163, 163, 163, 0.885);
 }
 
 #profilePicDefault {
@@ -379,7 +412,7 @@ text-align: center;
   flex-direction: row;
   flex-wrap: wrap;
   margin: auto;
-  justify-content: space-between;  
+  justify-content: space-evenly;  
 
 }
 
@@ -417,7 +450,7 @@ text-align: center;
   display:grid;
   min-height: fit-content;
   width:fit-content;
-  grid-template-columns: repeat(auto, 4);
+  grid-template-columns: repeat(auto, 3);
   grid-template-rows: repeat(auto);
 justify-content: space-evenly;
 }
