--- a/views/readPost.handlebars
+++ b/views/readPost.handlebars
@@ -1,21 +1,27 @@
-<div>
-    <h2>{{post_title}}</h2>
-    <h3>By {{user.username}}</h3>
+<div class="gridbox">
+
+    <article class="readPost">
+    <h2 class="postTitle">{{post_title}}</h2>
+    <h3 class="postTitle">Written by {{user.username}} on {{format_date created_at}}</h3>
     <hr/><br/>
-    <p>{{post_content}}</p>
+    <p class="singlePost">{{post_content}}</p>
+    </article>
 
 
 <div class="commentsBox">
+    <h4 class="welcomeUser">Comments</h4>
         {{#each comments as |comment|}}
-        <div> 
-            <span>{{comments.user.username}}</span>
+        <div class="commentBox"> 
+            <p class="comment username">{{user.username}}: </p>
             <p class="comment">{{comment.comment}}</p>
         </div>
         {{/each}}
         <div>
             <p>{{username}}</p>
-            <input type="text" class="comment" placeholder="Write your comment here"/>
+            <input type="text" id="commentToAdd" class="comment" placeholder="Write your comment"/>
             <button type="submit" id="addComment">Comment</button>
         </div>
     </div>
     </div>
+
+    <script src="/js/addComment.js"></script>
