--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,7 +372,7 @@ text-align: center;
   display: grid;
  grid-template-columns: repeat(autofill, 3);
  grid-template-rows: repeat(autofill);
-  width: min-content;
+  width: fit-content;
   height: min-content;
 }
 
@@ -394,7 +394,7 @@ text-align: center;
 
 .userPost {
   width: fit-content;
-  max-width: 150px;
+  max-width: 250px;
   background-color: var(--body-bg);
   box-shadow: 0px 0px 4px 4px rgba(163, 163, 163, 0.885);
 }
@@ -511,6 +511,35 @@ justify-content: space-evenly;
 
 .readMore {
 margin: auto 0 0 auto;
+}
+
+.editPost {
+  display: flex;
+  flex-direction: column;
+  margin: 2em auto;
+  background-color: var(--header-bg);
+  color: var(--header-title);
+}
+
+._404{
+  text-align: center;
+font-size: 5em;
+margin: 1em auto;
+}
+
+.trash{
+  margin: 10px; 
+  background-color: var(--header-title);
+  border-radius: 0;
+  width: 50px;
+  height: 50px;
+}
+
+.nfText{
+  margin: 1em auto;
+  color: var(--header-title);
+  font-size:large;
+  font-family: 'Press Start 2P', 'monospace';
 }
 
 @media (max-width: 700px) {
