--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,62 +1,56 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Console Blog</title>
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,500&display=swap" rel="stylesheet">
-  
-  <script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Console Blog</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
 
-  function btnTransform(x) {
-    x.classList.toggle("change");
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,500&display=swap"
+      rel="stylesheet"
+    />
 
-    var dC = document.getElementById("dropdownContent");
-    if(dC.value == 'visible') {
-      dC.style.opacity = 0;
-      dC.value = 'hidden';
-    } else {
-      dC.value = 'visible';
-      dC.style.opacity = 1;
-      dC.style.transition = "opacity  .4s" 
-    }
-  }
+    <script>
 
-  </script> 
-</head>
-  
+      function btnTransform(x) { x.classList.toggle("change"); var dC =
+      document.getElementById("dropdownContent"); if(dC.value == 'visible') {
+      dC.style.opacity = 0; dC.value = 'hidden'; } else { dC.value = 'visible';
+      dC.style.opacity = 1; dC.style.transition = "opacity .4s" } }
+
+    </script>
+  </head>
+
   <body>
     <div class="mainContainer">
-      
-    <header>
-{{#if logged_in}}
-<button id="logout" class="logoutBtn">Log Out</button>
-{{/if}}
-      <div class="headliner">
-      <h1 class="blog-title">
-        Console.blog()
-      </h1>
-      <div class="blinkContainerConstant">
-      <p class="blog-slogan">Bringing</p> 
-      <p class="blog-slogan">Problem</p>
-      <p class="blog-slogan">Solvers</p>
-      <div class="blinkLine">
-        <p class="blog-slogan">Together...</p>
-       <div class="blinkInfinite"></div>
-      </div>
-      </div>
-      
-      {{#if logged_in}}
-      <h3 class="welcomeUser">Welcome back, {{username}}!</h3>
-      {{/if}}
-    </div>
 
-     <div class="dropdown">
-        <button class="dropdownBtn" onclick="{btnTransform(this)}">
+      <header>
+        {{#if logged_in}}
+          <button id="logout" class="logoutBtn">Log Out</button>
+        {{/if}}
+        <div class="headliner">
+          <h1 class="blog-title">
+            Console.blog()
+          </h1>
+          <div class="blinkContainerConstant">
+            <p class="blog-slogan">Bringing</p>
+            <p class="blog-slogan">Problem</p>
+            <p class="blog-slogan">Solvers</p>
+            <div class="blinkLine">
+              <p class="blog-slogan">Together...</p>
+              <div class="blinkInfinite"></div>
+            </div>
+          </div>
+
+          {{#if logged_in}}
+            <h3 class="welcomeUser">Welcome back, {{username}}!</h3>
+          {{/if}}
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdownBtn" onclick="{btnTransform(this)}">
             <div class="bar1"></div>
             <div class="bar2"></div>
             <div class="bar3"></div>
@@ -64,63 +58,66 @@
           <div id="dropdownContent" class="dropdownContent" value="hidden">
             <ul>
               <li class="dropItem"><a href="/" class="dropLink">Home</a></li>
-              <li class="dropItem"><a href="/profile"  class="dropLink">Profile</a></li>
-              <li class="dropItem"><a href="/api/posts" class="dropLink">Posts</a></li>
+              <li class="dropItem"><a
+                  href="/profile"
+                  class="dropLink"
+                >Profile</a></li>
+              <li class="dropItem"><a
+                  href="/"
+                  class="dropLink"
+                >Posts</a></li>
 
             </ul>
 
           </div>
 
-     </div>
+        </div>
 
-    </header>
+      </header>
 
-  <main>
-      {{{ body }}}
-    </main>
+      <main>
+        {{{body}}}
+      </main>
 
- <footer id="footer">
- 
-  <div class="loggedInAs">
-    <h3 class="blog-title">Console.blog()</h3>
-     {{#if logged_in}}
-     <p class="welcomeUser">Logged in as {{username}} </p> 
-     {{/if}}
-  </div>
-     
+      <footer id="footer">
+
+        <div class="loggedInAs">
+          <h3 class="blog-title">Console.blog()</h3>
+          {{#if logged_in}}
+            <p class="welcomeUser">Logged in as {{username}} </p>
+          {{/if}}
+        </div>
 
         <ul>
-            <li>
-                <div class="blinkContainer"> 
-                 <a href="/" class="dropLink">Home</a>
-                  <div class="blinkHover">
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="blinkContainer"> 
-                <a href="/profile">Profile</a>
-                <div class="blinkHover">
+          <li>
+            <div class="blinkContainer">
+              <a href="/" class="dropLink">Home</a>
+              <div class="blinkHover">
               </div>
             </div>
-            </li>
-            <li>
-              <div class="blinkContainer"> 
-                <a href="/posts">Posts</a>
-                <div class="blinkHover">
+          </li>
+          <li>
+            <div class="blinkContainer">
+              <a href="/profile">Profile</a>
+              <div class="blinkHover">
               </div>
             </div>
-            </li>
+          </li>
+          <li>
+            <div class="blinkContainer">
+              <a href="/">Posts</a>
+              <div class="blinkHover">
+              </div>
+            </div>
+          </li>
         </ul>
-    </footer>
+      </footer>
     </div>
 
+    {{#if logged_in}}
+      <script src="/js/logout.js"></script>
+    {{/if}}
 
-
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-
-</body>
+  </body>
 
 </html>
