--- a/views/readPost.handlebars
+++ b/views/readPost.handlebars
@@ -17,7 +17,7 @@
       <div class="commentBox">
         <p class="comment username">{{user.username}}: </p>
         <p class="comment">{{comment.comment}}</p>
-
+        <p>Written on {{format_date created_at}} at {{format_date }}</p>
         <button class="deleteBtn" data={{comment.id}}><img
             class="trash"
             src="https://cdn.pixabay.com/photo/2017/04/10/12/19/trashcan-2218369__180.jpg"
